# ChangeLog for sci-biology/fastqc
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  05 Mar 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz> +files/build.xml,
  fastqc-0.11.2.ebuild:
  added build.xml exported by author from Eclipse IDE (it doesn't work under ant
  eclasses in my hands)

*fastqc-0.11.2 (24 Feb 2015)

  24 Feb 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  +fastqc-0.11.2.ebuild, -fastqc-0.10.1.ebuild:
  version bump; still missing src_compile() logic

  16 Sep 2014; Christoph Junghans <ottxor@gentoo.org> fastqc-0.10.1.ebuild:
  clean up

  23 Mar 2014; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  fastqc-0.10.1.ebuild:
  sci-biology/fastqc: reverse-engineered where sam-1.32.jar is likely coming
  from

*fastqc-0.10.1 (23 Mar 2014)

  23 Mar 2014; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  +fastqc-0.10.1.ebuild, +metadata.xml:
  sci-biology/fastqc: a skeleton for a new perl wrapper calling java libs, need
  help